[tool.poetry]
name = "space shooter"
version = "0.1.0"
description = "A simple space shooter video game."
authors = ["maccotter11 <122413834+maccotter11@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
